[project]
name = "smores"
dynamic = ["version"]
dependencies = ['tqdm', 'numpy', 'pandas', 'rdkit', 'stk']

[project.optional-dependencies]
dev = ['black', 'flake8', 'mypy', 'isort']


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
smores = ["py.typed"]

[tool.setuptools_.scm]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "psi4.*",
  "pandas.*",
  "seaborn.*",
  "dbstep.*",
  "ase.*",
  "streusel.*",
]
ignore_missing_imports = true
