[project]
name = "chem-smores"
dynamic = ["version"]
dependencies = [
  'numpy',
  'pandas',
  'rdkit',
  'stk',
  "ase",
  "dbstep",
  "streusel",
  "morfeus-ml",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "mypy",
  "isort",
  "pytest",
  "pytest-lazy-fixture",
  "types-pytest-lazy-fixture",
  "sphinx",
  "furo",
  "twine",
  "build",
  "pip-tools",
  "scikit-learn",
  "types-Pygments",
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
smores = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "v0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "psi4.*",
  "pandas.*",
  "seaborn.*",
  "dbstep.*",
  "ase.*",
  "streusel.*",
  "matplotlib.*",
  "setuptools.*",
  "statsmodels.*",
  "scipy.*",
  "sklearn.*",
]
ignore_missing_imports = true
